[package]
name = "rustynes-mobile"
description = "Platform-agnostic mobile control surface over rustynes-core (UniFFI-generated Kotlin/Swift bindings), shared by the Android and iOS hosts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["nes", "emulator", "android", "ios", "uniffi"]
categories = ["emulators"]

# v1.8.0 "Android" Workstream A — the shared mobile bridge. UniFFI consumes the
# `lib` crate-type to generate Kotlin (Android) + Swift (iOS) bindings; the
# `cdylib`/`staticlib` outputs are the `.so`/static archive the platform shells
# link. The `lib` output keeps the crate host-testable (`cargo test --workspace`)
# so the typed control surface is exercised on host CI — the device build only
# proves the same code links against the NDK toolchain.
[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
# Default features include `std`; the bridge is a hosted (std) target, never the
# `no_std` chip-stack gate. It re-exports the byte-identical core unchanged. The
# `hd-pack` feature turns on the PPU's per-pixel `HdTileSource` telemetry the
# compositor reads (output-only, byte-identical to the framebuffer).
rustynes-core = { workspace = true, features = ["hd-pack"] }
# v1.8.5 — the HD-pack loader + compositor (now a shared std crate). The compositor
# takes the framebuffer / watched memory / chr-peek as args, fed from the core.
rustynes-hdpack.workspace = true
# v1.8.6 — Lua scripting on mobile. The same sandboxed engine the desktop uses
# (per-frame `on_frame`, gated writes, no io/os/net); made `Send` (mlua `send`
# feature + Arc<Mutex> internals) so this UniFFI bridge can hold it. The default
# `mlua-backend` (vendored Lua 5.4 C) cross-compiles with the NDK.
rustynes-script.workspace = true
# v1.8.6 — RetroAchievements on mobile. The session state (login state machine,
# HUD model, per-game progress) extracted into `rustynes-ra` over the safe
# `RaClient` (now `Send`). `rustynes-cheevos` links the vendored rcheevos C
# runtime; its TLS stack (`ureq` + `rustls` + `ring`, no OpenSSL) cross-compiles
# with the NDK. Native-only by construction (empty crate on wasm32) — the mobile
# bridge is never a wasm target.
rustynes-ra.workspace = true
# v1.8.6 — direct-IP / same-LAN netplay on mobile. The native UDP rollback path
# (`UdpTransport` + `NetplayConnection` + `RollbackSession`) is all `std::net` +
# `Send`, so this UniFFI bridge can hold a session across the FFI boundary; it
# cross-compiles to `aarch64-linux-android` with the NDK. The in-memory
# `MemoryTransport`/`MeshTransport` are `!Send` test-only and never used by the
# bridge.
#
# v1.8.7 Phase B — internet play by room code. The `netplay-client` feature
# (default-on for native; `cfg(not(wasm32))` throughout) pulls in `NatConnect`,
# the NAT-traversal orchestrator (signaling room + STUN hole-punch + TURN
# fallback). Its WebSocket signaling client is the BLOCKING `tungstenite` +
# rustls path (NO tokio), so it cross-compiles to `aarch64-linux-android` with
# the NDK like the rest of the bridge. Requested explicitly here (not relied on
# as a transitive default) so a future default change can't silently drop the
# room-code path.
rustynes-netplay = { workspace = true, features = ["netplay-client"] }
thiserror.workspace = true
# UniFFI generates the foreign-language bindings from the `#[uniffi::export]`
# surface (proc-macro mode — no UDL file). The `cli` feature backs the
# `uniffi-bindgen` binary used by the Gradle/Xcode build to emit Kotlin/Swift.
uniffi = { version = "0.32", features = ["cli"] }
# v1.8.5 — accept still-compressed `.zip` ROMs (extract the first NES entry), the
# same convenience the desktop has. `deflate` is the only codec real NES zips use;
# default features off keeps bzip2/zstd/aes out of the mobile binary.
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
# v1.8.7 Phase B — the room-code loopback test stands up an in-process WebSocket
# signaling relay (driving the production `signaling::Relay` routing) + a mock
# STUN responder, exactly like `rustynes-netplay`'s `tests/nat_loopback.rs`. The
# blocking `tungstenite` server side mirrors the client the bridge uses; same
# version + pure-rustls features (no OpenSSL) so the dev build stays consistent.
tungstenite = { version = "0.30", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }

[[bin]]
# The binding generator the platform builds invoke:
#   cargo run -p rustynes-mobile --bin uniffi-bindgen -- generate \
#     --library <librustynes_mobile.so> --language kotlin --out-dir <gen>
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
