[package]
name = "rustynes-ppu"
description = "Cycle-accurate Ricoh 2C02 PPU (Picture Processing Unit) for the NES"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["nes", "2c02", "ppu", "emulator"]
categories = ["emulators"]

[lints]
workspace = true

[features]
default = []
# Per-PPU-dot state-tracing fixture (Session-10 observability tooling).
# Off by default — when disabled, the recording code is entirely dead via
# `#[cfg(feature = "ppu-state-trace")]` gates so the hot tick path has
# zero performance impact, zero memory overhead, and zero behavioral
# change. See `docs/adr/0005-ppu-state-trace.md` for design and
# `docs/ppu-trace-tooling.md` for usage. Enable with
# `cargo test --features ppu-state-trace ...`.
ppu-state-trace = []
# v1.2.0 beta.2 (Workstream C3) — per-frame HD-pack tile-source telemetry.
# Off by default so the shipped / wasm / no_std builds are byte-identical to
# today. When enabled, `emit_pixel` writes one `HdTileSource` record per visible
# pixel into a side buffer (the `hd_tile_source` field) in lockstep with the
# existing `index_framebuffer` write — observing the already-computed tile
# identity (CHR pattern-table base address, final palette slot, flip flags, and
# whether the pixel came from a sprite or the background). It is OUTPUT-ONLY: it
# reads no new VRAM, issues no new A12 / mapper events, mutates no emulation
# state, and is not part of the save-state — so the determinism / AccuracyCoin
# contract is unaffected and the framebuffer is byte-identical with the feature
# on or off. The frontend's HD-pack loader (`hdpack.rs`) consumes it to
# substitute Mesen-style hi-res replacement tiles at blit time. See
# `docs/ppu-2c02.md` §HD-pack tile-source export.
hd-pack = []
# v1.7.0 "Forge" Workstream A1 — debugger writeback hooks (palette / OAM /
# CIRAM direct pokes). Off by default so the shipped / wasm / no_std builds are
# byte-identical; the core forwards its own `debug-hooks` here, and those pokes
# are reached only through the gated post-frame poke path (never the run loop),
# so determinism + the AccuracyCoin contract are unaffected.
debug-hooks = []
# v2.0.1 (ADR 0030) — EXPERIMENTAL persistent-PPU-bus-address model (Option 2 /
# Mesen2's `_ppuBusAddress` + 3-dot-delayed `v`), the attempt to pass the two
# newest AccuracyCoin PPU tests ("Hybrid Addresses" $0492, "ALE + Read" $0491).
# Off by default so the SHIPPED build is byte-identical and stays at its measured
# AccuracyCoin value: EVERYTHING this feature adds — the `bus_addr` address
# tracking AND the behaviour-changing `$2006` hybrid-fetch / `$2007` ALE+Read
# corruption — is `#[cfg(feature = "mc-ppu-bus-addr-hybrid")]`-gated, so the
# default build compiles NONE of it (the fields do not even exist). See ADR 0030.
mc-ppu-bus-addr-hybrid = []

[dependencies]
bitflags.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "ppu_throughput"
path = "benches/ppu_throughput.rs"
harness = false
