[package]
name = "rustynes-ppu"
description = "Cycle-accurate Ricoh 2C02 PPU (Picture Processing Unit) for the NES"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["nes", "2c02", "ppu", "emulator"]
categories = ["emulators"]

[lints]
workspace = true

[features]
default = []
# Per-PPU-dot state-tracing fixture (Session-10 observability tooling).
# Off by default — when disabled, the recording code is entirely dead via
# `#[cfg(feature = "ppu-state-trace")]` gates so the hot tick path has
# zero performance impact, zero memory overhead, and zero behavioral
# change. See `docs/adr/0005-ppu-state-trace.md` for design and
# `docs/ppu-trace-tooling.md` for usage. Enable with
# `cargo test --features ppu-state-trace ...`.
ppu-state-trace = []
# v1.2.0 beta.2 (Workstream C3) — per-frame HD-pack tile-source telemetry.
# Off by default so the shipped / wasm / no_std builds are byte-identical to
# today. When enabled, `emit_pixel` writes one `HdTileSource` record per visible
# pixel into a side buffer (the `hd_tile_source` field) in lockstep with the
# existing `index_framebuffer` write — observing the already-computed tile
# identity (CHR pattern-table base address, final palette slot, flip flags, and
# whether the pixel came from a sprite or the background). It is OUTPUT-ONLY: it
# reads no new VRAM, issues no new A12 / mapper events, mutates no emulation
# state, and is not part of the save-state — so the determinism / AccuracyCoin
# contract is unaffected and the framebuffer is byte-identical with the feature
# on or off. The frontend's HD-pack loader (`hdpack.rs`) consumes it to
# substitute Mesen-style hi-res replacement tiles at blit time. See
# `docs/ppu-2c02.md` §HD-pack tile-source export.
hd-pack = []
# v1.7.0 "Forge" Workstream A1 — debugger writeback hooks (palette / OAM /
# CIRAM direct pokes). Off by default so the shipped / wasm / no_std builds are
# byte-identical; the core forwards its own `debug-hooks` here, and those pokes
# are reached only through the gated post-frame poke path (never the run loop),
# so determinism + the AccuracyCoin contract are unaffected.
debug-hooks = []
# v2.0.3 (ADR 0030) — diagnostic octal-latch calibration tracer (the `octal_trace`
# ring buffer used to cross-diff the 2-cycle-ALE fetch cadence against the TriCNES
# per-dot bus sequence). Off by default: the shipped / `#![no_std]` build gets a
# zero-cost no-op `push` stub with NO 64-bit-atomic ring storage (unavailable on
# the `thumbv7em` target), so the 2-cycle-ALE model's behavior is IDENTICAL with
# the feature on or off — it only gates whether the diagnostic ring is captured.
# See ADR 0030.
ppu-octal-trace = []
# v2.2.3 P2 — the specialized IDLE-LINE fast dot path (post-render line 240 +
# vblank lines 242..=260, 6,820 of the 89,342 NTSC dots). Off by default: it is
# byte-identical but does NOT clear the project's >3% adoption bar. Same-session
# Criterion A/B, feature-off vs feature-on, against a ±0.7% noise floor:
#
#   nes_run_frame_nestest            +0.16%  (p=0.23, no change)
#   nes_run_frame_nestest_fast       +0.41%  (p=0.01, marginally worse)
#   nes_run_frame_flowing_palette    -1.31%
#   nes_run_frame_flowing_palette_fast -1.55%
#
# i.e. a ~1.5% win only on rendering-DISABLED content, and neutral-to-slightly-
# negative on the rendering-heavy case that actually dominates real play. The
# guard runs on every dot A1's guard does not already claim to save work on idle
# dots whose general path was already short-circuiting on a cached bool, so the
# two roughly cancel. Retained rather than deleted: the code is proven
# byte-identical (`fast_dotloop_diff`, incl. a vblank-I/O torture ROM), and the
# shape becomes worthwhile if per-dot dispatch gets cheaper or the idle-line body
# grows. Compile-time rather than runtime precisely BECAUSE the cost is the
# per-dot guard — a runtime knob would still pay it when off.
# See `docs/performance.md` §P2 for the full measurement, including the
# contaminated first A/B and why it misled.
ppu-idle-line-fast = []

[dependencies]
bitflags.workspace = true
thiserror.workspace = true
# v2.1.2 (Fathom F1.4) — the generated NTSC base-palette synthesizer
# (`palette_gen`) integrates the composite waveform in YIQ, which needs
# `cos`/`sin`/`pow`. We route those through `libm` (pure-Rust, `no_std`) rather
# than `std`'s float methods so the generated palette is **byte-identical across
# every target** (x86 / aarch64 / wasm / `thumbv7em`) by construction — the
# committed golden snapshot then holds everywhere and CI never diverges. Mirrors
# the APU crate's `libm` usage. `default-features = false` keeps it `no_std`.
libm = { version = "0.2", default-features = false }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "ppu_throughput"
path = "benches/ppu_throughput.rs"
harness = false
