[package]
name = "rustynes-script"
version.workspace = true
edition = "2021"
rust-version = "1.86"
description = "Sandboxed Lua 5.4 scripting engine for the RustyNES emulator (memory/state access, per-frame callbacks)."
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
# `debug-hooks` exposes the trace + bus-access logs the onExec / onRead /
# onWrite callbacks replay. The hooks are byte-identical no-ops when unarmed
# (CI's test-roms job proves it), so enabling the feature here does not perturb
# determinism. The frontend already enables it for the C-sprint debugger.
rustynes-core = { workspace = true, features = ["debug-hooks"] }
mlua = { workspace = true }
thiserror = { workspace = true }
