[package]
name = "rustynes-script"
version.workspace = true
edition = "2024"
rust-version = "1.96"
description = "Sandboxed Lua 5.4 scripting engine for the RustyNES emulator (memory/state access, per-frame callbacks)."
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# v1.2.0 Workstream F4 — two VM backends behind a compile-time switch (the
# host-facing `ScriptEngine` API is identical for both). `mlua-backend`
# (default) is the production Lua 5.4 path — vendored C, native-only,
# byte-identical to v1.1.0. `script-wasm` swaps in the EXPERIMENTAL pure-Rust
# `piccolo` VM so scripting can compile to wasm32; it is OFF by default and is a
# SEPARATE feature from the frontend's `scripting` feature. Selection is by
# `cfg`: `script-wasm` wins when present (mlua's C cannot link on wasm), so the
# default/shipped/native build never pulls piccolo and a `script-wasm` build
# never compiles mlua's C.
default = ["mlua-backend"]
mlua-backend = ["dep:mlua"]
script-wasm = ["dep:piccolo"]

# v1.7.0 "Forge" Workstream E1 — host-mediated `comm.*` IPC (TCP / HTTP /
# WebSocket / memory-mapped-file). OFF by default. This feature only adds the
# `comm` Lua table + the `CommCmd` / `CommResult` host queues; it pulls NO
# network dependency into this crate, because the SCRIPT NEVER GETS A RAW
# SOCKET — the host (the frontend) owns every connection and marshals plain
# values across the boundary, preserving the sandbox's no-`io`/`os`/net
# guarantee. `comm.*` is a new non-deterministic source, so every verb is gated
# like `emu.write` and the core synthesis never sees it. The `client.*`
# automation verbs (E2) + the `userdata.*` KV store (E3) are UNCONDITIONAL (no
# net, no new non-determinism) and ship with the base `scripting` surface.
script-ipc = []

[dependencies]
# `debug-hooks` exposes the trace + bus-access logs the onExec / onRead /
# onWrite callbacks replay. The hooks are byte-identical no-ops when unarmed
# (CI's test-roms job proves it), so enabling the feature here does not perturb
# determinism. The frontend already enables it for the C-sprint debugger.
rustynes-core = { workspace = true, features = ["debug-hooks"] }
# mlua: the production backend (default). Optional so a `script-wasm`-only build
# (piccolo) never compiles the vendored Lua 5.4 C.
mlua = { workspace = true, optional = true }
# piccolo: the EXPERIMENTAL pure-Rust wasm backend (behind `script-wasm`). See
# `docs/adr/0012-wasm-lua-piccolo-backend.md` for the documented divergence.
piccolo = { workspace = true, optional = true }
thiserror = { workspace = true }
