[package]
name = "rustynes-test-harness"
description = "Test ROM runner and golden-master comparator for RustyNES"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
test-roms = []
# Forward to `rustynes-core/irq-timing-trace`. Off by default; enabled only by
# the Track C1 IRQ-timing fixture (`cargo test --features
# irq-timing-trace --test irq_trace_fixture`). See ADR-0002.
irq-timing-trace = ["rustynes-core/irq-timing-trace"]
# Real-game regression bisect harness. Requires commercial ROM dumps at
# `tests/roms/external/` (gitignored). Default off so CI never depends on
# non-distributable assets. See `tests/external_real_games.rs`.
commercial-roms = ["dep:png", "dep:zip"]
# Diagnostic-only: forward to `rustynes-core/debug-hooks` so the SMB3 repro bin
# can use the per-frame event/access logging APIs (set_event_logging / events /
# set_access_logging / accesses). NOT part of CI; off by default.
debug-hooks = ["rustynes-core/debug-hooks"]
# Forward to `rustynes-core/ppu-state-trace`. Off by default; enabled only by
# the Session-10 PPU-state-tracing fixture
# (`cargo test --features test-roms,ppu-state-trace
# --test ppu_state_trace_fixture`). See ADR-0005 and
# `docs/ppu-trace-tooling.md`.
ppu-state-trace = ["rustynes-core/ppu-state-trace"]
# v2.2.3 P2 — forward to `rustynes-core/ppu-idle-line-fast` so the differential
# suite can prove the gated path byte-identical:
#   cargo test -p rustynes-test-harness --features test-roms,ppu-idle-line-fast \
#     --test fast_dotloop_diff
ppu-idle-line-fast = ["rustynes-core/ppu-idle-line-fast"]
# v1.2.0 beta.2 (Workstream C3) — forward to `rustynes-core/hd-pack` so the
# determinism proof can run the full ROM corpus with the HD-pack tile-source
# telemetry ENABLED and confirm a byte-identical result vs. the feature OFF.
# The export is output-only, so AccuracyCoin / nestest / blargg / kevtris must
# be identical with this on. Off by default (the CI gate stays the stock build).
hd-pack = ["rustynes-core/hd-pack"]
# v2.0.3 (ADR 0030) — forward to `rustynes-core/ppu-octal-trace` so the
# AccuracyCoin battery can capture the diagnostic octal-latch ring
# (`RUSTYNES_OCTAL_TRACE=1`). Off by default; behavior is byte-identical.
ppu-octal-trace = ["rustynes-core/ppu-octal-trace"]
# v2.0 R1c-1 diagnostic — per-instruction (PC, cpu_cycle) trace. Forward to rustynes-core.
cpu-instr-cycle-trace = ["rustynes-core/cpu-instr-cycle-trace"]
# Forward to `rustynes-core/cpu-boot-trace`. Off by default; enabled only by
# the Session-12 cold-boot divergence fixture
# (`cargo test --features test-roms,cpu-boot-trace
# --test cpu_boot_trace_fixture`).
cpu-boot-trace = ["rustynes-core/cpu-boot-trace"]
# v2.0.0 R1/R2 closure attempt (2026-07-02) — forward to
# `rustynes-core/mmc3-m2-phase-irq`. Off by default; see
# `docs/audit/r1r2-per-dot-scheduler-attempt-2026-07-02.md`.
mmc3-m2-phase-irq = ["rustynes-core/mmc3-m2-phase-irq"]
# v2.1.5 "Fathom" F5.0 MMC3 R1/R2 residual instrumentation study — forward to
# `rustynes-core/mmc3-a12-phase-probe`. Off by default; enabled only by the
# `mmc3_r1r2_phase_probe` study fixture (`cargo test --features
# test-roms,mmc3-a12-phase-probe --test mmc3_r1r2_phase_probe`). Observational
# only — byte-identical emulated timeline. See ADR 0002 F5.0.
mmc3-a12-phase-probe = ["rustynes-core/mmc3-a12-phase-probe"]

[dependencies]
rustynes-core.workspace = true
thiserror.workspace = true
# PNG encoding for the v1.3.x left-edge capture bin (`capture_left_edge`),
# which is a regular bin target and so cannot use the dev-dependency `png`.
# Optional + only enabled by the `commercial-roms` feature the bin requires.
png = { version = "0.18", optional = true }
# Archive extraction for the commercial-roms coverage harness: a ROM left as a
# `.zip` (the No-Intro distribution form) is unzipped in-memory to its first
# NES/FDS/UNIF entry before the deterministic parse — mirroring the frontend's
# `extract_rom_from_zip`. Native-only (the harness is never compiled for wasm);
# `deflate`-only to match the frontend's feature set. `.7z` is handled via the
# `7z` CLI (no Rust dep), matching `scripts/coverage/coverage.py`.
zip = { version = "8", default-features = false, features = ["deflate"], optional = true }

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
# PNG dump for the real-game regression harness. Only pulled in when
# `commercial-roms` is on (the harness gates all PNG-writing code on
# that feature).
png = "0.18"
# SHA-256 for ROM dump pinning in the commercial-roms harness. The
# snapshot files record the SHA-256 of each ROM's bytes so a user with
# a different dump gets a clear "ROM mismatch" error instead of a
# cryptic framebuffer-hash mismatch. sha2 0.11 dropped the `std` feature
# (it is std-agnostic for fixed-output hashing), so the workspace dep is used
# as-is here.
sha2 = { workspace = true }

# Session-10 PPU-state-trace diff tool. Feature-gated so the
# binary doesn't compile (and its dependencies don't link) under
# the default build. See `docs/ppu-trace-tooling.md`.
[[bin]]
name = "ppu_trace_diff"
path = "src/bin/ppu_trace_diff.rs"
required-features = ["ppu-state-trace"]

# Session-12 CPU-boot-trace diff tool. Feature-gated so the binary
# doesn't compile under the default build. See
# `scripts/mesen2_cpu_boot_trace.lua` for the Mesen2 reference
# generator.
[[bin]]
name = "cpu_boot_trace_diff"
path = "src/bin/cpu_boot_trace_diff.rs"
required-features = ["cpu-boot-trace"]

# v1.2 Sprint 3 DMA-test frame scanner (needs `accuracy_coin::run_battery_capturing_ram`).
[[bin]]
name = "dump_battery_ram"
path = "src/bin/dump_battery_ram.rs"
required-features = ["test-roms"]

# v2.0.0 beta.2 (A2 scoping) — burn-loop histogram probe: prints the
# per-opcode busless-cycle counts (`Cpu::burn_histogram`) that the
# every-cycle-bus-access conversion must turn into dummy reads. See
# `to-dos/plans/v2.0.0-master-clock-plan.md` Workstream A2.
[[bin]]
name = "burn_probe"
path = "src/bin/burn_probe.rs"
required-features = ["cpu-instr-cycle-trace"]

# v2.0.0 beta.3 (A4 scoping) — warm-reset second-pass tracer: runs a blargg
# reset-protocol ROM to its $81 prompt, issues Nes::reset(), then dumps
# per-frame PC/status/text so a wedged second pass is directly observable.
[[bin]]
name = "reset_trace"
path = "src/bin/reset_trace.rs"
required-features = ["test-roms"]

# v2.0.0 beta.5 — Vs. DualSystem handshake trace probe: boots a DualSystem
# dump through `VsDualSystem` and prints per-console PC histograms so a
# deadlocked inter-CPU handshake is directly observable. Diagnostic only.
[[bin]]
name = "vs_dual_trace"
path = "src/bin/vs_dual_trace.rs"
required-features = ["commercial-roms"]

# v1.3.x left-edge sprite-tint / stutter regression capture + timing tool.
# Diagnostic only; reuses gitignored external ROM dumps. See
# `docs/audit/v1.3.x-video-stutter-regression-*.md`.
[[bin]]
name = "capture_left_edge"
path = "src/bin/capture_left_edge.rs"
required-features = ["commercial-roms"]

[[bin]]
name = "render_smoke"
path = "src/bin/render_smoke.rs"
required-features = ["commercial-roms"]

# v1.8.9 "Backlog" — headless batch runner (manifest -> screenshots + fb-hash +
# blank verdict, JSON out). Writes PNGs, so it needs the optional `png` dep.
[[bin]]
name = "batch_runner"
path = "src/bin/batch_runner.rs"
required-features = ["commercial-roms"]

[[bin]]
name = "repro_smb3"
path = "src/bin/repro_smb3.rs"
required-features = ["commercial-roms"]

[[bin]]
name = "coverage_smoke"
path = "src/bin/coverage_smoke.rs"
required-features = ["commercial-roms"]

# v1.2.0 SMB3 OAM-DMA per-cycle trace probe (diagnostic only). Dumps the OAM
# DMA write stream on a Mario-drop frame to pinpoint the skipped writes.
[[bin]]
name = "smb3_dma_trace"
path = "src/bin/smb3_dma_trace.rs"
required-features = ["commercial-roms", "irq-timing-trace", "debug-hooks"]

[[bin]]
name = "fds_smoke"
path = "src/bin/fds_smoke.rs"
required-features = ["commercial-roms"]

# T-101-002 diagnostic: FDS disk-swap reproduction (Kid Icarus side-B stall).
# Scripts an eject -> insert-side-N and logs framebuffer activity + disk-side
# state; fds_smoke can't swap sides. Real BIOS + disks never committed.
[[bin]]
name = "fds_swap_repro"
path = "src/bin/fds_swap_repro.rs"
required-features = ["commercial-roms"]

# T-101-002 diagnostic: FDS read-stream trace. Drains the $4031 disk-byte stream
# via Nes::enable_fds_trace and diffs the side-N disk-info block as the BIOS read
# it against the raw .fds, to pinpoint the ERR.07 ("wrong side number") source.
[[bin]]
name = "fds_trace"
path = "src/bin/fds_trace.rs"
required-features = ["commercial-roms"]

# v2.0 R1c-1 diagnostic: per-instruction (PC, cpu_cycle) trace dumper.
[[bin]]
name = "trace_instr_cycles"
path = "src/bin/trace_instr_cycles.rs"
required-features = ["cpu-instr-cycle-trace"]

# v2.2.0 Famicom Disk System Stage 1 harness. Synthetic-BIOS tests run under
# `test-roms`; the real-BIOS fdsirqtests path is env-gated (RUSTYNES_FDS_BIOS)
# and skips cleanly when unset. No BIOS is ever committed.
[[test]]
name = "fds"
path = "tests/fds.rs"
required-features = ["test-roms"]

# v2.1.5 "Fathom" F5.0 MMC3 R1/R2 residual instrumentation study. Purely
# observational A12-phase probe over the four failing sub-tests; requires both
# `test-roms` (the ROMs) and `mmc3-a12-phase-probe` (the M2-phase seeding +
# counters). Off the default gate; run explicitly. See ADR 0002 F5.0.
[[test]]
name = "mmc3_r1r2_phase_probe"
path = "tests/mmc3_r1r2_phase_probe.rs"
required-features = ["test-roms", "mmc3-a12-phase-probe"]
